--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site Settings                                                                                                        #
 ########################################################################################################################
 
-url: "https://tseknet.com"
+url: "https://kd.ms"
 baseurl: ''
 
 ########################################################################################################################
@@ -10,20 +10,20 @@ baseurl: ''
 ########################################################################################################################
 
 lang: en
-title: Dan Tsekhanskiy
-description: SRE from a Windows guy
+title: KD
+# description: This is my personal blog, where I share about the people I meet, I'm reading, and what I'm learning. I hope that you'll join the conversation.
 # A shorter description for the sidebar.
-tagline: SRE from a Windows guy
+# tagline: SRE from a Windows guy
 
 keywords: [
-  'PowerShell',
-  'SCCM',
-  'pwsh',
+  'KD',
+  'kd',
+  'dk',
   'SysAdmin',
   'Systems Administrator',
   'DevOps',
-  'SRE',
-  'Python',
+  'Personal SIte',
+  'Tricks',
   'Tutorials',
   'Tips'
   ]
@@ -35,25 +35,28 @@ logo: /assets/img/logo.png
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name: Dan Tsekhanskiy
-  email: dan@tseknet.com
+  name: KD
+  email: me@kd.ms
   # # Used by `jekyll-seo-tag`:
-  twitter: tseknet
+  twitter: kdtwitts
   rss: true
 
 share-links-active:
   twitter: true
   facebook: true
-  linkedin: true
-
+  whatsapp: true
+  telegram: true
+  
 # Add links to the sidebar.
 menu:
   - title: Blog
     url: /blog/
   - title: About
     url: /about/
+  - title: Login
+    url: /#
 
-copyright: ''
+copyright: '© KD 2021. All rights reserved.'
 
 permalink: /blog/:title
 
@@ -121,7 +124,7 @@ collections:
 
 # Set the Google Analytics id to receive `pageview` events.
 # To remove Google Anaylics from the page, remove the line below.
-# google_analytics: <id>
+google_analytics: G-5KHCX1WYP5
 
 # Setting a disqus shortname will enable the comment section on
 # pages with `comments: true` in the front matter.
@@ -129,7 +132,7 @@ collections:
 
 # Setting a tinyletter username will enable the newsletter subscription box.
 # PRO version only!
-tinyletter: TsekNet
+tinyletter: kdms
 
 
 ########################################################################################################################
@@ -141,7 +144,7 @@ hydejack:
   post_addons: [newsletter, about, related, random, comments]
 
   # Set to `true` if you don't want to show an icon indicating external links
-  no_mark_external: true
+  no_mark_external: false
 
   # Set to `true` if third party plugins fail to work with dynamically loaded pages
   no_push_state: true
@@ -191,7 +194,7 @@ hydejack:
 
   # When using Google Analytics, set to `true` to display a cookie notice banner.
   # When enabled, no user-related data will be stored until the user gives consent.
-  cookies_banner: false
+  cookies_banner: true
 
   # Set to `true` if you would like to add a "Powered by Hydejack" link in the footer.
   # Note that this setting has no effect when using the free version.
@@ -260,7 +263,7 @@ plugins:
 ########################################################################################################################
 
 # Where you proof that you own this site (used by jekyll-seo-tag)
-google_site_verification: UA-175070505-1
+google_site_verification: PsBevGIrBp0Ic-NAoL-hPoqmF-MRR0XnRiazXUHULQM
 # -- or --
 # webmaster_verifications:
 # google:  <verification-id>
@@ -270,7 +273,7 @@ google_site_verification: UA-175070505-1
 
 # Used for twitter cards
 twitter:
-  username:  tseknet
+  username:  kdtwitts
 
 # Used for facebook open graph
 # facebook:
@@ -280,8 +283,8 @@ twitter:
 
 # Used on index and about sites
 social:
-  name: Dan Tsekhanskiy
+  name: KD
 links:
-- https://twitter.com/TsekNet
-- https://github.com/TsekNet
-- https://www.linkedin.com/in/TsekNet
+- https://twitter.com/kdtwitts
+- https://github.com/dkarthe
+- https://www.linkedin.com/in/
